@@ -6,7 +6,6 @@ import br.com.gabrieltonhatti.entidades.Usuario;
 import br.com.gabrieltonhatti.exceptions.FilmeSemEstoqueException;
 import br.com.gabrieltonhatti.exceptions.LocadoraException;
 import br.com.gabrieltonhatti.servicos.LocacaoService;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -14,15 +13,17 @@ import org.junit.rules.ErrorCollector;
 import org.junit.rules.ExpectedException;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.Arrays;
+import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
 
-import static br.com.gabrieltonhatti.utils.DataUtils.isMesmaData;
-import static br.com.gabrieltonhatti.utils.DataUtils.obterDataComDiferencaDias;
+import static br.com.gabrieltonhatti.utils.DataUtils.*;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assume.assumeFalse;
+import static org.junit.Assume.assumeTrue;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.fail;
 
@@ -44,6 +45,8 @@ public class LocacaoServiceTest {
 
     @Test
     public void deveAlugarFilme() throws Exception {
+        assumeFalse(verificarDiaSemana(new Date(), Calendar.SATURDAY));
+
         // Cenário
         Usuario usuario = new Usuario("Usuário 1");
         List<Filme> filmes = List.of(new Filme("Filme 1", 1, 5.0));
@@ -99,82 +102,20 @@ public class LocacaoServiceTest {
     }
 
     @Test
-    public void devePagar75PctNoFilme3() throws FilmeSemEstoqueException, LocadoraException {
+    public void deveDevolverNaSegundaAoAlugarNoSabado() throws FilmeSemEstoqueException, LocadoraException {
+        assumeTrue(verificarDiaSemana(new Date(), Calendar.SATURDAY));
+
         // Cenário
         Usuario usuario = new Usuario("Usuario 1");
-        List<Filme> filmes = Arrays.asList(
-                new Filme("Filme 1", 2, 4.0),
-                new Filme("Filme 2", 2, 4.0),
-                new Filme("Filme 3", 2, 4.0)
-        );
+        List<Filme> filmes = List.of(new Filme("Filme 1", 1, 5.0));
 
         // Ação
-        Locacao resultado = service.alugarFilme(usuario, filmes);
+        Locacao retorno = service.alugarFilme(usuario, filmes);
 
         // Verificação
-        Assert.assertThat(resultado.getValor(), is(11.0));
+        boolean ehSegunda = verificarDiaSemana(retorno.getDataRetorno(), Calendar.MONDAY);
+        assertTrue(ehSegunda);
 
     }
-
-    @Test
-    public void devePagar50PctNoFilme4() throws FilmeSemEstoqueException, LocadoraException {
-        // Cenário
-        Usuario usuario = new Usuario("Usuario 1");
-        List<Filme> filmes = Arrays.asList(
-                new Filme("Filme 1", 2, 4.0),
-                new Filme("Filme 2", 2, 4.0),
-                new Filme("Filme 3", 2, 4.0),
-                new Filme("Filme 4", 2, 4.0)
-        );
-
-        // Ação
-        Locacao resultado = service.alugarFilme(usuario, filmes);
-
-        // Verificação
-        Assert.assertThat(resultado.getValor(), is(13.0));
-
-    }
-
-    @Test
-    public void devePagar25PctNoFilme5() throws FilmeSemEstoqueException, LocadoraException {
-        // Cenário
-        Usuario usuario = new Usuario("Usuario 1");
-        List<Filme> filmes = Arrays.asList(
-                new Filme("Filme 1", 2, 4.0),
-                new Filme("Filme 2", 2, 4.0),
-                new Filme("Filme 3", 2, 4.0),
-                new Filme("Filme 4", 2, 4.0),
-                new Filme("Filme 5", 2, 4.0)
-        );
-
-        // Ação
-        Locacao resultado = service.alugarFilme(usuario, filmes);
-
-        // Verificação
-        Assert.assertThat(resultado.getValor(), is(14.0));
-
-    }
-
-    @Test
-    public void devePagar0PctNoFilme6() throws FilmeSemEstoqueException, LocadoraException {
-        // Cenário
-        Usuario usuario = new Usuario("Usuario 1");
-        List<Filme> filmes = Arrays.asList(
-                new Filme("Filme 1", 2, 4.0),
-                new Filme("Filme 2", 2, 4.0),
-                new Filme("Filme 3", 2, 4.0),
-                new Filme("Filme 4", 2, 4.0),
-                new Filme("Filme 5", 2, 4.0),
-                new Filme("Filme 6", 2, 4.0)
-        );
-
-        // Ação
-        Locacao resultado = service.alugarFilme(usuario, filmes);
-
-        // Verificação
-        Assert.assertThat(resultado.getValor(), is(14.0));
-
-    }
-
 
 }
